--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 				<option value="Wilderness">Wilderness</option>
 				<option value="Zemouregal's Fortress">Zemouregal's Fortress</option>
 			</select>
-			<button class="nisbutton" onclick="TEST.AddSafe()">Add Safe</button>
+			<button class="nisbutton" onclick="AddSafe()">Add Safe</button>
 		</div>
 		<label class="switch">
 			<input id="tooltip_toggle" type="checkbox">
